[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "astronomia"
dynamic = ["readme", "version"]
description = "Library for calculation of ephemeris and other astronomical calculations"
dependencies = [
    "cltoolbox",
    "numpy",
    "pandas",
    "toolbox_utils",
    ]
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
    ]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Environment :: Console",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]  # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
keywords = ["ephemeris", "astronomy"]

[project.optional-dependencies]
dev = [
    "black",
    "cleanpy",
    "twine",
    "pytest",
    "coverage",
    "flake8",
    "pytest-cov",
    "pytest-mpl",
    "pre-commit",
    "black-nbconvert",
    "blacken-docs",
    "velin",
    "isort",
    "pyroma",
    "pyupgrade",
    "commitizen",
    ]

[project.scripts]
solstice = "astronomia.apps.solstice:main"
check_perihelion = "astronomia.apps.check_perihelion:main"
cronus = "astronomia.apps.cronus:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/astronomia/docs/index.html#astronomia-documentation"
github = "https://github.com/timcera/astronomia"
bitbucket = "https://bitbucket.org/timcera/astronomia/src/main/"

[tool]

[tool.check-manifest]
ignore = ["docs/_function_autosummary/*",
          ".coverage",
          ".deepsource.toml",
          ".ipynb_checkpoints/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.8"
tag_format = "v$version"
version_files = ["VERSION"]
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples*", "tools*", "docs*", "astronomia.tests*"]

[tool.setuptools_scm]
