[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0.0",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[project]
name = "astronomia"
dynamic = ["readme", "version"]
description = "Library for calculation of ephemeris and other astronomical calculations"
dependencies = [
    "cltoolbox",
    "numpy",
    "pandas"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
] # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
keywords = ["ephemeris", "astronomy"]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.scripts]
solstice = "astronomia.apps.solstice:main"
check_perihelion = "astronomia.apps.check_perihelion:main"
cronus = "astronomia.apps.cronus:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/astronomia/docs/index.html#astronomia-documentation"
github = "https://github.com/timcera/astronomia"
bitbucket = "https://bitbucket.org/timcera/astronomia/src/main/"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "3.0.2"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
